--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation files('libs/achartengine-1.0.0.jar')
+    implementation 'nl.joery.animatedbottombar:library:1.0.8'
+    implementation 'com.google.android.material:material:1.0.0'
 }
